# spark-indexer

./: .gitignore  Cargo.toml  docker-compose.yaml  package-lock.json  package.json  proxy-contract-abi.json  spark_indexer.manifest.yaml  tsconfig.base.json
.github/workflows/: deploy.yml
schema/: spark_indexer.schema.graphql
src/: config.ts  index.ts  lib.rs  server.ts
src/constants/limitOrdersConstants/: LimitOrdersAbi__factory.ts
src/crones/: orderFetcherCrone.ts  tradeFetcherCrone.ts
src/models/: Order.ts  Trade.ts
src/services/: mongoService.ts  ordersFetcher.ts  tradesFetcher.ts
src/utils/: tai64toUnix.ts
tests/: orders.test.ts  trades.test.ts
